--- a/Sections 28: APIs/5.2 JSON/views/index.ejs
+++ b/Sections 28: APIs/5.2 JSON/views/index.ejs
@@ -17,24 +17,22 @@
   <div id="recipeContainer" class="hidden">
 
     <!-- If no recipe yet, show: -->
-    <% if (!locals.recipeName) { %>
+    <% if (!locals.recipe) { %>
     <h2>Pick your favourite taco ingredient 👆</h2>
     <!-- Else, show the recipe name e.g. <h2>Recipe name</h2>-->
     <% } else { %>
-    <h2><%= recipeName["name"] %></h2>
+    <h2><%= recipe["name"] %></h2>
     
     <h3>Ingredients:</h3>
     <ul id="ingredientsList">
-      <li><%= recipeName.ingredients.protein.name %>, <%= recipeName.ingredients.protein.preparation %></li>
-      <li><%= recipeName.ingredients.salsa.name %></li>
-      <% recipeName.ingredients.toppings.forEach(topping => { %>
+      <li><%= recipe.ingredients.protein.name %>, <%= recipe.ingredients.protein.preparation %></li>
+      <li><%= recipe.ingredients.salsa.name %></li>
+      <% recipe.ingredients.toppings.forEach(topping => { %>
       <li><%=topping.quantity %> of <%= topping.name %></li>
       <% }); %>
     </ul>
   
     <% } %>
-
-
   </div>
 </body>
 
